# textual-snake-game

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/textual_snake_game/: __init__.py  __main__.py  cli.py  snake_game.py
src/textual_snake_game/core/: __init__.py  game_engine.py  models.py
src/textual_snake_game/ui/: __init__.py  ui_components.py
tests/: README.md  __init__.py  test_food.py  test_game_engine.py  test_game_timer.py  test_input_handling.py  test_integration.py  test_snake.py
